testsuite/poke.pkl/strings-index-diag-1.pk
/* { dg-do compile } */

var a = "foo"[4]; /* { dg-error "" } */
